recycling-bin/2026-04-21-repo-cleanup/tmp/stream-bootstrap/objects/sunrun2_procurement_orders__dll/sunrun2_procurement_orders__dll.object-meta.xml
<CustomObject>
    <label>sunrun2_procurement_orders</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Other</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>