recycling-bin/2026-04-21-repo-cleanup/tmp/stream-bootstrap/objects/sunrun2_procurement_orders__dll/fields/KQ_procurement_order_id__c.field-meta.xml
<CustomField>
    <fullName>KQ_procurement_order_id__c</fullName>
    <label>KQ_procurement_order_id</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_procurement_order_id</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>